# libopencad

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  dwg_base.h  dwg_format_sentinels.h  dwg_r2000.cpp  dwg_r2000.h  index.html  libdwgx  libdwgx.cpp  libdwgx.h  libdwgx_datatypes.h  libdwgx_io.cpp  libdwgx_io.h  main.cpp  makefile  params.json
apps/: CMakeLists.txt  cadinfo.cpp
cmake/: ExternalProject.cmake  FindAnyProject.cmake  FindExtGTest.cmake  FindExtProject.cmake  JSONParser.cmake  PackageConfig.cmake.in  uninstall.cmake.in  util.cmake
docs/html/: annotated.html  cadclasses_8h_source.html  cadcolors_8h_source.html  cadfile_8h_source.html  cadfileio_8h_source.html  cadfilestreamio_8h_source.html  cadgeometry_8h_source.html  cadheader_8h_source.html  cadlayer_8h_source.html  cadobjects_8h_source.html  cadtables_8h_source.html  class_c_a_d3_d_face_object-members.html  class_c_a_d3_d_face_object.html  class_c_a_d_arc-members.html  class_c_a_d_arc.html  class_c_a_d_arc_object-members.html  class_c_a_d_arc_object.html  class_c_a_d_attdef-members.html  class_c_a_d_attdef.html  class_c_a_d_attdef_object-members.html  class_c_a_d_attdef_object.html  class_c_a_d_attrib-members.html  class_c_a_d_attrib.html  class_c_a_d_attrib_object-members.html  class_c_a_d_attrib_object.html  class_c_a_d_block_control_object-members.html  class_c_a_d_block_control_object.html  class_c_a_d_block_header_object-members.html  class_c_a_d_block_header_object.html  class_c_a_d_block_object-members.html  class_c_a_d_block_object.html  class_c_a_d_circle-members.html  class_c_a_d_circle.html  class_c_a_d_circle_object-members.html  class_c_a_d_circle_object.html  class_c_a_d_classes-members.html  class_c_a_d_classes.html  class_c_a_d_dictionary_object-members.html  class_c_a_d_dictionary_object.html  class_c_a_d_dimension_aligned_object-members.html  (+213 more)
docs/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_a.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  (+25 more)
docs/latex/: annotated.tex  class_c_a_d3_d_face_object.eps  class_c_a_d3_d_face_object.tex  class_c_a_d_arc.eps  class_c_a_d_arc.tex  class_c_a_d_arc_object.eps  class_c_a_d_arc_object.tex  class_c_a_d_attdef.eps  class_c_a_d_attdef.tex  class_c_a_d_attdef_object.eps  class_c_a_d_attdef_object.tex  class_c_a_d_attrib.eps  class_c_a_d_attrib.tex  class_c_a_d_attrib_object.eps  class_c_a_d_attrib_object.tex  class_c_a_d_block_control_object.eps  class_c_a_d_block_control_object.tex  class_c_a_d_block_header_object.eps  class_c_a_d_block_header_object.tex  class_c_a_d_block_object.eps  class_c_a_d_block_object.tex  class_c_a_d_circle.eps  class_c_a_d_circle.tex  class_c_a_d_circle_object.eps  class_c_a_d_circle_object.tex  class_c_a_d_classes.tex  class_c_a_d_dictionary_object.eps  class_c_a_d_dictionary_object.tex  class_c_a_d_dimension_aligned_object.eps  class_c_a_d_dimension_aligned_object.tex  class_c_a_d_dimension_angular2_ln_object.eps  class_c_a_d_dimension_angular2_ln_object.tex  class_c_a_d_dimension_angular3_pt_object.eps  class_c_a_d_dimension_angular3_pt_object.tex  class_c_a_d_dimension_diameter_object.eps  class_c_a_d_dimension_diameter_object.tex  class_c_a_d_dimension_linear_object.eps  class_c_a_d_dimension_linear_object.tex  class_c_a_d_dimension_object.eps  class_c_a_d_dimension_object.tex  (+132 more)
dwg_samples/mysamples/: triple_circle.dwg
gtest/: CMakeLists.txt
gtest/tests/: CMakeLists.txt  io_check.cpp  io_check.cpp.cpp  reading_geometries.cpp
gtest/tests/data/: triple_circles.dwg
lib/: CMakeLists.txt  cadclasses.cpp  cadclasses.h  cadcolors.h  caddictionary.cpp  caddictionary.h  cadfile.cpp  cadfile.h  cadfileio.h  cadfilestreamio.cpp  cadfilestreamio.h  cadgeometries.h  cadgeometry.cpp  cadgeometry.h  cadheader.cpp  cadheader.h  cadlayer.cpp  cadlayer.h  cadobjects.cpp  cadobjects.h  cadtables.cpp  cadtables.h  libopencad.cpp  main.cpp  opencad.cpp  opencad.h  opencad_api.h  simpledatatypes.h
lib/dwg/: CMakeLists.txt  constants.h  data_structs.h  io.cpp  io.h  r2000.cpp  r2000.h
lib/include/: cadfile.h  cadgeometries.h  libopencad_api.h
lib/include/dwg/: dwg_base.h  dwg_constants.h  dwg_data_structs.h  dwg_io.h  dwg_r2000.h
lib/internal/: Object.hpp  cadobjects.hpp  toolkit.hpp  types.hpp  utils.hpp
lib/internal/formats/dwg/: r2000.hpp
lib/internal/io/: BitStream.hpp  Serialization.hpp  bitstream.hpp  bitstream_reader.hpp  cadbitstreamreader.cpp  cadbitstreamreader.hpp
lib/src/: cadfile.cpp  libopencad_api.cpp
lib/src/dwg/: dwg_io.cpp  dwg_r2000.cpp
libdwgx/: CMakeLists.txt  LICENSE  Makefile  dwg_base.h  dwg_format_sentinels.h  dwg_geometries.h  dwg_objecttypes.h  dwg_r2000.cpp  dwg_r2000.h  libdwgx.cpp  libdwgx.h  libdwgx_datatypes.h  libdwgx_io.cpp  libdwgx_io.h  libdwgx_versions.h  main.cpp
test/: ACAD_r2000_libereco.dwg  ACAD_r2000_libereco_original.dxf  ACAD_r2004_libereco.dwg  ACAD_r2004_sample.dwg
tests/: CMakeLists.txt  bitstream_reader_test.cpp  io_check.cpp  reading_geometries.cpp
tests/data/r2000/: 1arc.dwg  256_lwpolylines_7vertexes.dwg  3rays_5xlines.dwg  4solids.dwg  triple_circles.dwg
tests/gtest-lib/make/: sample1_unittest
tests/gtest-lib/samples/: sample2.cc  sample7_unittest.cc
tests/gtest-lib/src/: gtest-port.cc  gtest-printers.cc  gtest.cc
tests/gtest-lib/test/: gtest-port_test.cc  gtest-printers_test.cc  gtest-typed-test2_test.cc  gtest_catch_exceptions_test_.cc  gtest_color_test.py  gtest_environment_test.cc  gtest_help_test.py  gtest_list_tests_unittest.py  gtest_output_test.py  gtest_output_test_.cc  gtest_shuffle_test.py  gtest_stress_test.cc  gtest_xml_outfiles_test.py  gtest_xml_test_utils.py
tests/gtest-lib/xcode/Config/: DebugProject.xcconfig  ReleaseProject.xcconfig
tests/gtest-lib/xcode/Scripts/: versiongenerate.py
tests/tests/: CMakeLists.txt  io_check.cpp  reading_geometries.cpp
tests/tests/data/: triple_circles_with_points.dwg
tests/tests/data/r2000/: six_3dpolylines.dwg
